fix: proper z-index for image popup

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -126,7 +126,7 @@ figcaption {
     bottom: 0;
     right: 0;
     background-color: rgba(33, 33, 33, 0.5);
-    z-index: -1;
+    z-index: 1;
 }
 
 .popup.open {
